# zero2prod

./: .env  .gitignore  Cargo.toml  Dockerfile  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yaml
configuration/: production.yaml
scripts/: build.sh  create_DO_app.sh  destroy_DO_app.sh  init_db.sh  update_DO_app.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: README.md  health_check.rs
